# nifti-phi-scan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
fixtures/: create_test_fixtures.py
nifti_phi_scan/: cli.py  header_scanner.py  models.py  pixel_scanner.py  scanner.py  slice_extractor.py
tests/: test_models.py  test_scanner.py  test_slice_extractor.py
