[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nifti-phi-scan"
version = "0.1.0"
description = "GPU-enabled NIfTI PHI detection: header field inspection and OCR pixel scanning"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Elijah Rockers", email = "elijah.rockers@gmail.com"}]

dependencies = [
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "easyocr>=1.7",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
nifti-phi-scan = "nifti_phi_scan.cli:main"

[tool.setuptools.packages.find]
include = ["nifti_phi_scan"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
